allow start of server with exec plugin